<resources>
    <string name="about_label">About</string>
    <string name="add_button">Add</string>
    <string name="adjust_audio_label">Adjust video</string>
    <string name="alert_headphones_title">Headphones</string>
    <string name="alert_headphones_message">When recording with beats, you MUST use headphones (same as in a studio).</string>
    <string name="alert_headphones_ok">OK</string>
    <string name="alert_adjust_vocals_title">Step 1</string>
    <string name="alert_adjust_vocals_message">
        Some devices may apply a lag when recording audio.\n\nFirst check that your vocals align with the video - delay or advance vocals as necessary.
    </string>
    <string name="alert_adjust_vocals_ok">OK</string>
    <string name="alert_adjust_beat_title">Step 2</string>
    <string name="alert_adjust_beat_message">
        Now add the beat to your video by increasing the volume.\n\nThen check the vocals/video align with the beat. Delay or advance the beat as necessary.
    </string>
    <string name="alert_adjust_beat_ok">OK</string>
    <string name="app_name">Everyday Empire</string>
    <string name="audio_from_clip">Custom audio from clip.</string>
    <string name="balance_description">
        You can use the wallet balance to instantly send gifts to other users within the app.
    </string>
    <string name="beat_label">Beat</string>
    <string name="beats_label">Beats</string>
    <string name="bio_label">Bio</string>
    <string name="browse_file_title">Browse file</string>
    <string name="browse_label">Browse</string>
    <string name="business_switch">Request business account?</string>
    <string name="buy_button">Buy</string>
    <string name="cancel_button">Cancel</string>
    <string name="chat_label">Chat</string>
    <string name="clips_label">Clips</string>
    <string name="close_button">Close</string>
    <string name="comments_label">Comments</string>
    <string name="comments_switch">Enable comments on this clip?</string>
    <string name="composer_hint">Type something here…</string>
    <string name="confirmation_block_user">Do you want to block this user? None of you will be able to send messages.</string>
    <string name="confirmation_close_app">Do you really want to close app?</string>
    <string name="confirmation_close_recording">You will lose your recorded clips (if any). Are you sure?</string>
    <string name="confirmation_delete_clip">Do you really want to delete this clip? This cannot be undone.</string>
    <string name="confirmation_delete_comment">Do you really want to delete this comment? This cannot be undone.</string>
    <string name="confirmation_delete_draft">Do you really want to permanently delete this draft clip? It cannot be undone.</string>
    <string name="confirmation_delete_message">Do you really want to delete this message? This cannot be undone.</string>
    <string name="confirmation_disable_account">
        This will disable your account permanently and you will not be able to login again.
        Do you really want to continue?
        This cannot be undone.
    </string>
    <string name="confirmation_redeem_gift">
        Do you really want redeem selected gift balance?
        Platform fee may be deducted from the final amount.
    </string>
    <string name="confirmation_unblock_user">Do you want to unblock this user? You both will be able to message each other again.</string>
    <string name="content_language_spinner">Content language</string>
    <string name="conversations_label">Conversations</string>
    <string name="count_clips" formatted="false">%s clips</string>
    <string name="count_credits" formatted="false">%d credits</string>
    <string name="cta_label_spinner">Call to action</string>
    <string name="cta_link_hint">URL for the action</string>
    <string name="delay_label">Advance / Delay</string>
    <string name="deleted_user">Deleted user</string>
    <string name="delete_button">Delete</string>
    <string name="details_button">Details</string>
    <string name="disable_account_label">Disable account</string>
    <string name="disable_button">Disable</string>
    <string name="discover_label">Search</string>
    <string name="done_button">Done</string>
    <string name="draft_label">Draft</string>
    <string name="duet_switch">Allow people to record duet?</string>
    <string name="edit_label">Edit</string>
    <string name="email_label">Email</string>
    <string name="empty_articles">No news articles found to display.</string>
    <string name="empty_clips">No clips found to display.</string>
    <string name="empty_comments">No comments found to display.</string>
    <string name="empty_conversations">No conversations found to display.</string>
    <string name="empty_followers">No followers found to display.</string>
    <string name="empty_followings">No followings found to display.</string>
    <string name="empty_gifts">No gifts received to display.</string>
    <string name="empty_hashtags">No hashtags found to display.</string>
    <string name="empty_messages">No message found to display.</string>
    <string name="empty_notifications">No notifications found to display.</string>
    <string name="empty_redemptions">No redemptions found to display.</string>
    <string name="empty_songs">No songs found to display.</string>
    <string name="empty_stickers">No stickers found to display.</string>
    <string name="empty_users">No users found to display.</string>
    <string name="empty_barpads">No BarPads. \n\nUse Barpad to write lyrics \n\nPerform and read from BarPad while recording a video</string>
    <string name="show_barpad">Show Barpad</string>
    <string name="barpad_name_label">Barpad Name</string>
    <string name="select_beat">SELECT BEAT</string>
    <string name="change_beat">Change Beat</string>
    <string name="hide_barpad">Hide Barpad</string>
    <string name="barpad_action_button_label">OPEN</string>
    <string name="message_barpad_updated">Barpad information was successfully updated.</string>
    <string name="beat_removed_message">Sorry tbe beat you previously choose has been removed from everyday empire. Please choose another before recording</string>
    <string name="beat_removed_name">Sorry beat has been removed</string>
    <string name="beat_removed_label">Beat has been removed</string>
    <string name="error_ad_load_failed">Could not load an ad to display.</string>
    <string name="error_choose_file">Please choose a file.</string>
    <string name="error_field_required">This field is required.</string>
    <string name="error_iab_connection">Failed to connect to Play Store billing service.</string>
    <string name="error_internet">Please check your internet connection.</string>
    <string name="error_invalid_otp">The code you entered is incorrect.</string>
    <string name="error_invalid_phone">The phone number entered is not valid.</string>
    <string name="error_server">Server returned an unexpected response.</string>
    <string name="error_thread_failed">Failed to load thread information.</string>
    <string name="error_unknown">There was some unexpected error.</string>
    <string name="facebook_label">Facebook</string>
    <string name="faq_label">F.A.Q.</string>
    <string name="filter_button">Filter</string>
    <string name="filters_label">Filters</string>
    <string name="flash_button">Flash</string>
    <string name="flip_button">Flip</string>
    <string name="follow_label">Follow</string>
    <string name="followers_label">Followers</string>
    <string name="following_label">Following</string>
    <string name="for_you_label">For You</string>
    <string name="generate_label">Generate</string>
    <string name="gift_sent_message">Gifts were successfully sent.</string>
    <string name="gifts_label">Gifts</string>
    <string name="google_label">Google</string>
    <string name="hashtags_label">Hashtags</string>
    <string name="instagram_label">Instagram</string>
    <string name="invite_label">Invite &amp; earn</string>
    <string name="language_label">Preferred languages</string>
    <string name="barpad_label">Barpad</string>
    <string name="barpad_new_label">New</string>
    <string name="lease_label">Lease</string>
    <string name="lease_beat_label">Lease beat</string>
    <string name="legal_label">Legal</string>
    <string name="likes_label">Likes</string>
    <string name="linkedin_label">LinkedIn</string>
    <string name="loading_label">Loading…</string>
    <string name="location_label">Location</string>
    <string name="login_description">Please login by clicking on any of the below services to continue using the app.</string>
    <string name="login_email_description">Please enter your email address below &amp; click on Generate button to receive an OTP.</string>
    <string name="login_label">Login</string>
    <string name="login_otp_description">Please enter your mobile number below &amp; click on Generate button to receive an OTP.</string>
    <string name="login_otp_sent">OTP has been sent to your mobile number. Please wait for a while until it arrives.</string>
    <string name="login_otp_sent_email">OTP has been sent to your email. If you can\'t find it in your Inbox shortly, please check your spam/junk folder too.</string>
    <string name="login_required_message">You need to be logged in to access this.</string>
    <string name="login_success">You have successfully logged in.</string>
    <string name="logout_label">Logout</string>
    <string name="message_accept_policies">To continue, please read and accept our legal policies.</string>
    <string name="message_account_disabled">Your account has been permanently disabled.</string>
    <string name="message_blocked">The user has blocked you from sending messages.</string>
    <string name="message_blocking" formatted="false">You have blocked this user from sending messages. %s</string>
    <string name="message_blocking_both" formatted="false">You both have blocked each other from messaging. %s</string>
    <string name="message_clip_downloaded">Successfully saved the video clip to gallery.</string>
    <string name="message_clip_updated">Clip information was successfully updated.</string>
    <string name="message_downloading_async">You can enjoy watching videos while it is being downloaded in background.</string>
    <string name="message_empty_cart">Please add gifts to send first.</string>
    <string name="message_label">Message</string>
    <string name="message_qr_description">Your friends may scan this code in their app to view your profile and uploaded clips.</string>
    <string name="message_qr_invalid">This content is not supported by our app.</string>
    <string name="message_redemption_submitted">
        Your redemption request was successfully received.
        It will reviewed soon and approved accordingly.
    </string>
    <string name="message_sharing_async">You can enjoy watching videos while we are downloading video for sharing.</string>
    <string name="message_song_change">You cannot change song after recording has started.</string>
    <string name="message_song_select">You cannot select song after recording has started.</string>
    <string name="message_trim_too_long" formatted="false">Please select no more that %d seconds to cut.</string>
    <string name="message_trim_too_short" formatted="false">Please select at least %d seconds to cut.</string>
    <string name="message_uploading">
        There\'s already a pending upload.
        Please wait for it to finish before uploading another.
    </string>
    <string name="mmss">00:00</string>
    <string name="name_label">Name</string>
    <string name="news_label">News</string>
    <string name="notification_channel_name">Default</string>
    <string name="notification_clip_approved">Uploaded clip is now approved.</string>
    <string name="record_button">Record</string>
</resources>