<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/partial_header" />

    <ScrollView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header"
        android:visibility="gone"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/play_beat_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="5dp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/header"
                tools:visibility="visible">

                <Button
                    android:id="@+id/play"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="5dp"
                    android:minWidth="1dp"
                    android:visibility="gone"
                    app:icon="@drawable/ic_baseline_play_arrow_24"
                    app:iconPadding="0dp"
                    tools:visibility="visible" />

                <Button
                    android:id="@+id/pause"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="5dp"
                    android:minWidth="1dp"
                    android:visibility="visible"
                    app:icon="@drawable/ic_baseline_pause_24"
                    app:iconPadding="0dp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.vanniktech.emoji.EmojiTextView
                        android:id="@+id/change_beat"
                        style="@style/TextOnShadow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:gravity="center"
                        android:text="@string/change_beat"
                        android:textColor="@color/colorButtonEmail"
                        android:textSize="15sp"
                        tools:text="Change beat" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <SeekBar
                            android:id="@+id/seekbar"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            tools:progress="50" />

                    </LinearLayout>

                    <com.vanniktech.emoji.EmojiTextView
                        android:id="@+id/information"
                        style="@style/TextOnShadow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="end"
                        android:textAlignment="center"
                        android:textSize="15sp"
                        tools:text="So real Sounds | Clockwork" />

                </LinearLayout>

                <ImageButton
                    android:id="@+id/record_with_barpad3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="5dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/record_button"
                    android:minWidth="1dp"
                    app:srcCompat="@drawable/btn_record_small" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/select_beat_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:visibility="visible"
                tools:visibility="visible">

                <Button
                    android:id="@+id/select_beat_button"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:strokeColor="#FFFFFF"
                    tools:text="@string/select_beat" />

                <ImageButton
                    android:id="@+id/record_with_barpad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/about_label"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/btn_record_small" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/barpad_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/barpad_name_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:importantForAutofill="no"
                    android:singleLine="true"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/barpad_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:hint="@string/composer_hint"
                app:boxBackgroundColor="#00FFFFFF"
                app:counterEnabled="true"
                app:counterMaxLength="5000">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="true"
                    android:enabled="true"
                    android:focusable="true"
                    android:gravity="bottom|start"
                    android:importantForAutofill="no"
                    android:inputType="textCapSentences|textMultiLine"
                    android:isScrollContainer="true"
                    android:maxLines="15"
                    android:minLines="15"
                    android:textIsSelectable="true"
                    android:textSize="12sp" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

</RelativeLayout>
